HTML/CSS/JS Title, button, background decoration css fixes. Some small fixes

--- a/app/pug/blocks/feedback.pug
+++ b/app/pug/blocks/feedback.pug
@@ -1,4 +1,6 @@
-section.feedback
+section.feedback#feedbackSection
+    .bg-el.feedback__bg-left
+    .bg-el.feedback__bg-right
     .container
         .feedback-wrap
             h1.title.feedback-title Have questions?
