--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -1,4 +1,5 @@
 section.gallery.darkblock
+    .bg-el.gallery__bg
     hgroup.container
         h1.title.gallery-title-wrap
             span.gallery-title Gallery
