--- a/app/pug/blocks/partners.pug
+++ b/app/pug/blocks/partners.pug
@@ -1,4 +1,4 @@
-section.partners
+section.partners#partnersSection
     .container
         .title.partners-title-wrap
             span.partners-title Our partners
