--- a/app/pug/blocks/programs/programs.pug
+++ b/app/pug/blocks/programs/programs.pug
@@ -1,8 +1,8 @@
-section.programs
-    .programs__bg-top-left
-    .programs__bg-top-right
-    .programs__bg-bottom-left
-    .programs__bg-bottom-right
+section.programs#programsSection
+    .bg-el.programs__bg-top-left
+    .bg-el.programs__bg-top-right
+    .bg-el.programs__bg-bottom-left
+    .bg-el.programs__bg-bottom-right
     .container
         hgroup.programs-header
             h1.title.programs-title-wrap
