--- a/app/pug/blocks/testimonials.pug
+++ b/app/pug/blocks/testimonials.pug
@@ -1,4 +1,4 @@
-section.testimonials
+section.testimonials#testimonialsSection
     .container
         h1.title.testimonials-title Testimonials
         .subtitle We have enough patience to teach you the art of coffee
@@ -8,6 +8,7 @@ section.testimonials
                     li.testimonials-slider-item
                         .testimonials-slider__img
                             img(src="./img/blocks/testimonials/nikandrov.png")
+                            a(href="#" target="_blank").fb-link
                         h2.title.title_sm Alex Nikandrov
                         blockquote.testimonials-slider__text
                             | Our company is grateful for the delicious and freshly roasted coffee in our office every day! Our staff of more than 300
@@ -19,6 +20,7 @@ section.testimonials
                     li.testimonials-slider-item
                         .testimonials-slider__img
                             img(src="./img/blocks/testimonials/nikandrov.png")
+                            a(href="#" target="_blank").fb-link
                         h2.title.title_sm Other slide ##{n}
                         blockquote.testimonials-slider__text
                             | Lorem ipsum dolor sit amet...
