--- a/app/pug/blocks/top.pug
+++ b/app/pug/blocks/top.pug
@@ -1,4 +1,4 @@
-section.top.darkblock
+section.top.darkblock#topSection
     hgroup.top-wrap
         h2.top-title.top-title_sm
             span.top-title__decor-top Intensive program barista training
@@ -7,4 +7,4 @@ section.top.darkblock
         h2.top-title
             span.top-title__decor-bottom On the basis of the company's largest coffee roasters
         a(href="#").top__scroll
-.top__bg-granola
+.bg-el.top__bg-el-granola
