--- a/app/sass/blocks/testimonials.scss
+++ b/app/sass/blocks/testimonials.scss
@@ -1,8 +1,7 @@
 .testimonials {
-    padding-top: rem(64px);
-    padding-bottom: rem(100px);
+    padding: rem(74px) 0 rem(100px);
     &-title {
-        margin-bottom: rem(20px);
+        margin-bottom: rem(30px);
     }
     &-slider {
         margin-top: rem(72px);
@@ -16,19 +15,24 @@
             .title_sm {
                 text-align: center;
                 letter-spacing: 0.12em;
-                margin-bottom: rem(16px);
+                margin-bottom: rem(19px);
             }
             outline: none;
         }
         &__img {
-            margin: 0 auto rem(31px);
+            margin: 0 auto rem(35px);
             width: rem(170px);
             height: rem(170px);
-            overflow: hidden;
-            border-radius: 50%;
+            position: relative;
             img {
                 max-width: 100%;
                 max-height: 100%;
+                border-radius: 50%;
+            }
+            .fb-link {
+                position: absolute;
+                right: rem(-7px);
+                top: rem(23px);
             }
         }
         &__text {
@@ -62,7 +66,8 @@
                 padding: 0;
                 margin: 0;
                 border: none;
-                line-height: 1;
+                position: relative;
+                box-shadow: none;
                 outline: none;
                 &:before {
                     width: rem(16px);
@@ -74,7 +79,7 @@
                     position: absolute;
                     top: 50%;
                     left: 50%;
-                    transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%)
                 }
             }
         }
