HTML/CSS/JS Footer nav block fixes. Scroll/navigation draft

--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -1,4 +1,4 @@
-section.gallery.darkblock
+section.gallery.darkblock#gallerySection
     .bg-el.gallery__bg
     hgroup.container
         h1.title.gallery-title-wrap
