--- a/app/pug/blocks/top.pug
+++ b/app/pug/blocks/top.pug
@@ -6,5 +6,5 @@ section.top.darkblock#topSection
             span.accent Amsterdam
         h2.top-title
             span.top-title__decor-bottom On the basis of the company's largest coffee roasters
-        a(href="#").top__scroll
+        a(href="#").scroll.top__scroll
 .bg-el.top__bg-el-granola
