--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -4,11 +4,12 @@ block variables
     - title = "Barista Training In Amsterdam"
 
 block content
-    include ../layout/header.pug
+    a(href="#").scroll.scroll-to-top
+    include ../blocks/header.pug
     include ../blocks/top.pug
     include ../blocks/programs/programs.pug
     include ../blocks/gallery.pug        
     include ../blocks/testimonials.pug
     include ../blocks/partners.pug
     include ../blocks/feedback.pug
-    include ../layout/footer.pug
+    include ../blocks/footer.pug
