--- a/app/sass/blocks/footer.scss
+++ b/app/sass/blocks/footer.scss
@@ -38,6 +38,8 @@
         text-transform: uppercase;
         &-header {
             border-bottom: rem(1px) solid white;
+            margin: 0;
+            display: block;
         }
         &-body {
             table-layout: fixed;
@@ -67,7 +69,7 @@
         }
     }
     &-icon {
-        width: rem(40px);
+        width: rem(50px);
         height: rem(40px);
         background-position: center center;
         background-repeat: no-repeat;
