--- a/app/sass/tags.scss
+++ b/app/sass/tags.scss
@@ -4,11 +4,6 @@
     box-sizing: border-box;
 }
 
-*:focus {
-    outline: rem(1px) dotted black;
-    outline-offset: rem(3px);
-}
-
 body {
     font-family: 'Georgia';
     line-height: 1.625;
@@ -21,7 +16,8 @@ body {
 
 a {
     transition: $transition;
-    &:hover {
+    &:hover,
+    &:focus {
         color: $gold;
     }
 }
@@ -34,6 +30,15 @@ h5,
 h6 {
     font-family: 'RobotoBlack';
     color: black;
+}
+
+input,
+button,
+select {
+    &:focus {
+        outline: rem(1px) dotted black;
+        outline-offset: rem(3px);
+    }
 }
 
 button,
@@ -53,7 +58,6 @@ input[type="submit"] {
     cursor: pointer;
     width: auto;
     line-height: 1.4;
-    @extend %hover;
     &[disabled] {
         opacity: .5;
         cursor: not-allowed;
