--- a/app/sass/blocks/footer.scss
+++ b/app/sass/blocks/footer.scss
@@ -33,7 +33,8 @@
         background: rgba(black, .38);
         border: rem(1px) solid white;
         width: 100%;
-        font-family: 'RobotoBlack';
+        font-family: 'Roboto';
+        font-weight: bold;
         font-size: rem(16px);
         text-transform: uppercase;
         &-header {
@@ -93,7 +94,8 @@
     }
     &__link {
         margin-left: rem(20px);
-        font-family: 'RobotoBlack';
+        font-family: 'Roboto';
+        font-weight: bold;
         text-transform: uppercase;
         font-size: rem(13px);
         letter-spacing: .02em;
