--- a/app/sass/blocks/header.scss
+++ b/app/sass/blocks/header.scss
@@ -53,7 +53,8 @@
             padding: 0 rem(23px);
             font-size: rem(26px);
             text-decoration: none;
-            font-family: 'RobotoBlack';
+            font-family: 'Roboto';
+            font-weight: bold;
             letter-spacing: -.04em;
             &:hover {
                 color: $gold;
