--- a/app/sass/blocks/top.scss
+++ b/app/sass/blocks/top.scss
@@ -39,6 +39,7 @@
     &-title {
         font-size: rem(22px);
         font-family: 'Georgia';
+        font-weight: normal;
         letter-spacing: -.02em;
         font-weight: normal;
         &_sm {
