--- a/app/pug/blocks/testimonials.pug
+++ b/app/pug/blocks/testimonials.pug
@@ -21,7 +21,7 @@ section.testimonials#testimonialsSection
                         .testimonials-slider__img
                             img(src="./img/blocks/testimonials/nikandrov.png")
                             a(href="#" target="_blank").fb-link
-                        h2.title.title_sm Other slide ##{n}
+                        h2.title.title_sm Other slide ##{n + 2}
                         blockquote.testimonials-slider__text
                             | Lorem ipsum dolor sit amet...
                         - n++
