JS Simple tabs animation

--- a/app/sass/blocks/gallery.scss
+++ b/app/sass/blocks/gallery.scss
@@ -75,7 +75,7 @@
                 outline-color: $gold;
             }
             &:hover {
-                background: $gold;
+                background: rgba($gold, .5);
             }
             &:before {
                 display: block;
