CSS/JS Gallery slider counter. Footer table links style

--- a/app/pug/blocks/footer.pug
+++ b/app/pug/blocks/footer.pug
@@ -26,9 +26,11 @@ footer.footer.darkblock
                     .cell
                         .footer-icon.footer-icon-envelope
                 .row.row_bottom
-                    .cell +38 000 000 000
+                    .cell
+                        a(href="tel:+38000000000") +38 000 000 000
                     .cell Ukraine, 61002
-                    .cell Hello@.com
+                    .cell
+                        a(href="mailto:hello@.com") Hello@.com
         .footer-bottom
             | © Copyright 2017 . All Rights Reserved.
             span.footer__link Site template by 
