--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -16,7 +16,7 @@ section.gallery.darkblock#gallerySection
                 img(src="./img/blocks/gallery/slide1.jpg")
         .gallery-slider-nav
             a(href="#").gallery-slider__toggle.gallery-slider__toggle_prev
-            span.gallery-slider__count 5 
-            span.gallery-slider__text from 
-            span.gallery-slider__count 10
+            span.gallery-slider__count#galleryActiveNumber 5
+            span.gallery-slider__text  from 
+            span.gallery-slider__count#galleryTotal 10
             a(href="#").gallery-slider__toggle.gallery-slider__toggle_next
