--- a/app/sass/blocks/footer.scss
+++ b/app/sass/blocks/footer.scss
@@ -67,6 +67,13 @@
             text-align: center;
             vertical-align: middle;
             border: rem(1px) solid #4d4d4d;
+            a {
+                color: white;
+                &:hover {
+                    color: $gold;
+                    text-decoration: none;
+                }
+            }
         }
     }
     &-icon {
