--- a/app/sass/elements/tabs.scss
+++ b/app/sass/elements/tabs.scss
@@ -32,6 +32,9 @@
             &>li {
                 display: none;
                 position: relative;
+                animation-name: tabs;
+                animation-duration: 700ms;
+                // animation-iteration-count: infinite;
                 &.active {
                     display: block;
                 }
@@ -46,5 +49,15 @@
         left: 0;
         background: black;
         position: absolute;
+    }
+}
+
+@keyframes tabs {
+    0% {
+        opacity: 0;
+        transform: translateX(-1%);
+    }
+    100% {
+        opacity: 1;
     }
 }
