HTML/CSS/JS Pixel perfect. Small fixes

--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -1,6 +1,6 @@
 section.gallery.darkblock#gallerySection
     .bg-el.gallery__bg
-    hgroup.container
+    .container
         h1.title.gallery-title-wrap
             span.gallery-title Gallery
         .subtitle You yourself are testing the taste benefits of each method
