--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -7,7 +7,7 @@ block content
     a(href="#").scroll.scroll-to-top
     include ../blocks/header.pug
     include ../blocks/top.pug
-    include ../blocks/programs/programs.pug
+    include ../blocks/programs.pug
     include ../blocks/gallery.pug        
     include ../blocks/testimonials.pug
     include ../blocks/partners.pug
