--- a/app/sass/blocks/header.scss
+++ b/app/sass/blocks/header.scss
@@ -8,6 +8,10 @@
     color: white;
     a {
         color: white;
+        &:focus {
+            outline: none;
+            color: $gold;
+        }
     }
     &:before {
         content: '';
