--- a/app/sass/blocks/partners.scss
+++ b/app/sass/blocks/partners.scss
@@ -42,6 +42,14 @@
         }
         &-item {
             height: rem(100px);
+            &:focus {
+                outline: none;
+            }
+            >a {
+                &:focus {
+                    background: rgba($gold, .2);
+                }
+            }
         }
         &__link {
             height: inherit;
