HTML/CSS Header phone number, header and footer nav, gallery slider nav, focus fixes

--- a/app/pug/blocks/feedback.pug
+++ b/app/pug/blocks/feedback.pug
@@ -4,7 +4,7 @@ section.feedback#feedbackSection
     .container
         .feedback-wrap
             h1.title.feedback-title Have questions?
-            .subtitle.feedback-subtitle Leave a request and we will contact you shortly
+            p.subtitle.feedback-subtitle Leave a request and we will contact you shortly
             form.feedback-form
                 .feedback-form-section
                     input(type="text" name="name" id="name" placeholder="Your name" required pattern="^[ a-zA-Zа-яА-ЯіІїЇёЁъ-]*$")
