--- a/app/pug/blocks/header.pug
+++ b/app/pug/blocks/header.pug
@@ -14,4 +14,14 @@ header.header
                     a(href="#feedbackSection") Contact
             .nav__underline
         .header__tel
-            a(href="tel:+380996611730") +38 (099) 66-11-730
+            a(href="tel:+380996611730") 
+                span.header__tel_light +
+                |38 
+                span.header__tel_light (
+                |099
+                span.header__tel_light )
+                |  66
+                span.header__tel_light -
+                | 11
+                span.header__tel_light -
+                | 730
