--- a/app/pug/blocks/partners.pug
+++ b/app/pug/blocks/partners.pug
@@ -1,6 +1,6 @@
 section.partners#partnersSection
     .container
-        .title.partners-title-wrap
+        h1.title.partners-title-wrap
             span.partners-title Our partners
         .partners-slider
             ul.partners-slider-list
