--- a/app/pug/blocks/programs.pug
+++ b/app/pug/blocks/programs.pug
@@ -8,7 +8,7 @@ section.programs#programsSection
         .programs-header
             h1.title.programs-title-wrap
                 span.programs-title Programs
-            .subtitle We share their experience and professional barista championships multiple winners
+            p.subtitle We share their experience and professional barista championships multiple winners
         .tabs
             .tabs-nav
                 ul
