--- a/app/pug/blocks/testimonials.pug
+++ b/app/pug/blocks/testimonials.pug
@@ -1,7 +1,7 @@
 section.testimonials#testimonialsSection
     .container
         h1.title.testimonials-title Testimonials
-        .subtitle We have enough patience to teach you the art of coffee
+        p.subtitle We have enough patience to teach you the art of coffee
         .testimonials-slider
             ul.testimonials-slider-list
                 - var n = 0
