--- a/app/pug/mixins/program-tab.pug
+++ b/app/pug/mixins/program-tab.pug
@@ -19,9 +19,9 @@ mixin program-tab(details,checked)
         ul.programs-about-list
             li
                 h3.programs-about__title
-                    span Provenance
-                        br
-                        | Coffee and basic concepts:
+                    | Provenance
+                    br
+                    | Coffee and basic concepts:
                 .programs-about__content
                     | Legend of the origin of coffee
                     ul
