--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -3,7 +3,7 @@ section.gallery.darkblock#gallerySection
     .container
         h1.title.gallery-title-wrap
             span.gallery-title Gallery
-        .subtitle You yourself are testing the taste benefits of each method
+        p.subtitle You yourself are testing the taste benefits of each method
             br
             | and select the type of cooking yourself
     .gallery-slider
@@ -16,7 +16,8 @@ section.gallery.darkblock#gallerySection
                 img(src="./img/blocks/gallery/slide1.jpg")
         .gallery-slider-nav
             a(href="#").gallery-slider__toggle.gallery-slider__toggle_prev
-            span.gallery-slider__count#galleryActiveNumber 5
-            span.gallery-slider__text  from 
-            span.gallery-slider__count#galleryTotal 10
+            .gallery-slider__slide-counter
+                span.gallery-slider__count#galleryActiveNumber 5
+                span.gallery-slider__text  from 
+                span.gallery-slider__count#galleryTotal 10
             a(href="#").gallery-slider__toggle.gallery-slider__toggle_next
