--- a/app/sass/blocks/footer.scss
+++ b/app/sass/blocks/footer.scss
@@ -13,6 +13,13 @@
         letter-spacing: .07em;
         margin: 0;
         padding: 0;
+        li {
+            letter-spacing: .08em;
+            margin-right: rem(80px);
+            &:before {
+                left: rem(-40px);
+            }
+        }
     }
     &-content {
         margin: rem(51px) 0 rem(64px);
